# esp32_rtc_gpio_ulp

./: sdkconfig  sdkconfig.old
main/: CMakeLists.txt  sd_card_example_main.c  ulp_wakeup.c  ulp_wakeup.h
main/ulp/: pulse_cnt.S
